--- a/Tiền xử lý dữ liệu.ipynb
+++ b/Tiền xử lý dữ liệu.ipynb
@@ -3481,7 +3481,28 @@
    "id": "18d16a5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(\"--- ĐANG TẠO FILE MẪU CHUẨN CHO WEB APP ---\")\n",
+    "\n",
+    "# Đây là dữ liệu mà mô hình hiểu được (toàn số)\n",
+    "demo_data = data['X_test_lgbm'].head().copy()\n",
+    "\n",
+    "# 2. Gắn thêm cột ID vào (Vì lúc train mình bỏ ID ra, giờ gắn lại để Web hiện thị)\n",
+    "# Lưu ý: Phải lấy ID tương ứng với 100 dòng đầu\n",
+    "demo_data['SK_ID_CURR'] = data['test_ids'].head(100).values\n",
+    "\n",
+    "# 3. Đưa cột ID lên đầu tiên cho đẹp\n",
+    "cols = ['SK_ID_CURR'] + [c for c in demo_data.columns if c != 'SK_ID_CURR']\n",
+    "demo_data = demo_data[cols]\n",
+    "\n",
+    "# 4. Lưu ra file CSV\n",
+    "demo_data.to_csv('file_demo_chuan.csv', index=False)\n",
+    "\n",
+    "print(\"✅ Đã tạo xong file: 'file_demo_chuan.csv'\")\n",
+    "print(\"BẠN HÃY UPLOAD FILE NÀY LÊN WEB NHÉ!\")"
+   ]
   }
  ],
  "metadata": {
